<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120101"
    tools:context=".Congratulations">

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/enter_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/sumit"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="39sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/CongratsFor"
        android:layout_width="359dp"
        android:layout_height="79dp"
        android:layout_marginTop="52dp"
        android:fontFamily="cursive"
        android:text="@string/congrats_for"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/EditInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:hint="@string/winning_today_s_football_match"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="39sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CongratsFor"
        android:autofillHints="" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createIt"
        android:padding="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/pushAgain"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditInfo"
        app:layout_constraintVertical_bias="0.198" />

</android.support.constraint.ConstraintLayout>